So I fixed the team pics (they were resizing weird on mobile)
Added page descriptions (before it still said lorem ipsum)

Put in the youtube links and some of the social media ones

--- a/IEinEthiopia/css/agency.css
+++ b/IEinEthiopia/css/agency.css
@@ -99,9 +99,15 @@ h6 {
 .container{
     max-width: 1000px;
 }
-
+@media(max-width:767){
 .col-team {
 width: 50%;
+}
+}
+@media(max-width:767){
+.col-team {
+width: 100%;
+}
 }
 
 .bg-darkest-gray {
